--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -7,6 +7,7 @@ a {
 	text-decoration: none;
 }
 
+
 .orders {
 	width: 100%;
 	margin-top: 10px;
@@ -37,7 +38,7 @@ a {
 	display: block;
 }
 
-.head-menu li:nth-child(1) span {
+.head-menu .menu-click {
 	background: #f63577;
 	box-shadow: 0 0 0 1px #f63577;
 	color: #fff;
@@ -80,6 +81,19 @@ a {
 	flex-direction: row;
 	justify-content: flex-start;
 	flex-wrap: wrap;
+}
+
+.product-container a:link {
+	color: #383838
+}
+.product-container a:visited {
+	color: #383838
+}
+.product-container a:hover {
+	color: #383838
+}
+.product-container a:active {
+	color: #383838
 }
 
 ul {
@@ -128,6 +142,7 @@ ul {
 	-webkit-box-orient: vertical;
 	text-align: left;
 	line-height: 20px;
+	padding: 9px;
 }
 
 
@@ -143,4 +158,50 @@ ul {
 	font-size: 22px;
 	color: #ee4d79;
 	font: inherit;
+}
+
+.body-pagination {
+	flex-grow: 1;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.body-pagination ul {
+	display: inline-flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.body-pagination li {
+    cursor: default;
+    text-align: center;
+    width: 36px;
+    line-height: 38px;
+    height: 38px;
+    font-size: 13px;
+}
+
+.body-pagination li a {
+    transition: .3s;
+    background: #fff;
+    color: #383838;
+	border-color: #ccc;
+	display: block;
+    width: 100%;
+    height: 100%;
+    border-width: 1px;
+	border-style: solid;
+	cursor: pointer;
+}
+
+.body-pagination li a:hover {
+    color: #f63577;
+}
+
+.body-pagination li a.disabled{
+	cursor: default;
+    background: #f63577;
+    border-color: #f63577;
+    color: #fff;
 }
