--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -1,5 +1,9 @@
 $smallThreeColor:hsl(344, 81%, 65%);
 $footerNav:rgb(230, 227, 227);
+$hover-color:#999;
+$iconhover-color:#272626;
+$footer-content-length:10px;
+
 header {
     width: 100%;
     border-bottom: 1px solid rgb(223, 223, 223);
@@ -8,19 +12,23 @@ header {
 .header-top {
   position:fixed;
   width: 100%;
-  z-index: 1  ;
+  z-index: 1  ; 
   top: 0;
   ul {
     display: flex;
     justify-content: space-around;
     background: #272626;
-    padding: 20px;
+    padding: 15px;
     li {
       a {
         color: rgb(219, 226, 226);
         padding: 10px;
-        font-size: 20px;
+        font-size: 18px;
         text-decoration: none;
+        &:hover {
+          color: $hover-color;
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -29,15 +37,19 @@ header {
 .head {
   margin-top: 45px;
   .awoo-headlogo {
-    width:200px;padding: 20px;
+    width:150px;
+    padding: 20px;
   }
   .logo-font {
+    top:  2.6%;
+    left: 10%;
     position: absolute;
     font-family:cursive;
     font-size: 35px;
-    //display: inline-block;
+    font-style: oblique;
     margin-top: 100px;
     color: $smallThreeColor;
+    user-select:none;
   }
   .icon {
     a:nth-child(1) {
@@ -53,7 +65,7 @@ header {
       font-size:35px;
       margin-left: 10px;    
         i:hover {
-          color: #272626;
+          color: $iconhover-color;
         }
     }
   }
@@ -69,21 +81,27 @@ header {
       padding-left:5px;
       border:1.5px solid $smallThreeColor; 
       cursor:pointer;
-      width: 400px;
+      width: 300px;
       border-radius: 5px 0 0 5px;
       height: 30px;
+      outline: none;
+      cursor: text;
     }
-    .sure-bottom {
+    .sure-botton {
       padding:5px 15px;
-      border:1.5px solid $smallThreeColor;
+      border:1.1px solid $smallThreeColor;
       background-color: $smallThreeColor;
       color: #fff;
-      cursor:pointer;
-      width: 60px;
-      font-size: 10px;
-      font-family:sans-serif;
+      width: 70px;
+      font-size: 13px;
       margin-left: -5px;
       border-radius: 0 5px 5px 0;
+      outline: none;
+      opacity: 0.8;
+      cursor: pointer; 
+      &:hover {
+        opacity: 1;
+      }
     }
 }
 
@@ -93,47 +111,53 @@ header {
   width: 100%;
   bottom: 0;
   .footer-nav {
-      padding: 2px;
-      font-size: 18px;
-      font-family:"sans-serif";
+      padding: $footer-content-length;
       line-height: 24px;
         a {
           text-decoration: none;
           color:$footerNav;
+          font-size: 18px;
+          &:hover {
+            color:$hover-color;
+            text-decoration: underline;
+          }
+        }
+        span {
+          color:$footerNav;
         }
     }
   .footer-info {
-    padding: 2px;
-    font-size: 15px;
-    font-family:"sans-serif";
+    margin-left: $footer-content-length;
+    font-size: 16px;
     line-height: 24px;
     color:$footerNav;
   }
   .footer-service {
-      padding: 2px;
-      font-size: 18px;
-      font-family:"sans-serif";
-      line-height: 24px;
+    padding: $footer-content-length;
+    font-size: 18px;
+    line-height: 24px;
+    color:$footerNav;
+    a {
+      text-decoration: none;
       color:$footerNav;
-      a {
-        text-decoration: none;
-        color:$footerNav;
+      &:hover {
+        color:$hover-color;
+        text-decoration: underline;
       }
+    }  
   }
   .footer-company {
-    padding: 2px;
+    margin-left: $footer-content-length;
     span {
-      font-size: 15px;
-      font-family:"sans-serif";
+      font-size: 16px;
       line-height: 24px;
       color:$footerNav;
     }
   }
   .footer-address {
-    padding: 2px;
+    margin-left: $footer-content-length;
     span {
-      font-size: 15px;
-      font-family:"sans-serif";
+      font-size: 16px;
       line-height: 24px;
       color:$footerNav;
     }
@@ -147,19 +171,17 @@ header {
   }
   .awoo-foottext1 {
     font-size: 15px;
-    font-family:"sans-serif";
     line-height: 24px;
-    color: #999;
+    color: $hover-color;
     position: absolute;
     left: 80%;
     bottom: 60%;
     float: left;
   }
   .awoo-foottext2 {
-    color: #999;
+    color: $hover-color;
     font-weight: bold;
     font-size: 26px;
-    font-family:"sans-serif";
     line-height: 24px;
     position: absolute;
     left: 80%;
