--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -17,7 +17,7 @@ header {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background: #272626;
-  padding: 15px;
+  padding: 10px;
 }
 
 .header-top ul li a {
@@ -38,13 +38,13 @@ header {
 
 .head .awoo-headlogo {
   width: 150px;
-  padding: 20px;
+  padding-left: 10px;
 }
 
 .head .logo-font {
-  top: 2.6%;
-  left: 10%;
   position: absolute;
+  top: -8px;
+  left: 108px;
   font-family: cursive;
   font-size: 35px;
   font-style: oblique;
