--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -7,15 +7,15 @@ $footer-content-length:10px;
 header {
     width: 100%;
     border-bottom: 1px solid rgb(223, 223, 223);
+
 }
 
 .header-top {
-  position:fixed;
   width: 100%;
-  z-index: 1  ; 
   top: 0;
-  ul {
+  .top-menu {
     display: flex;
+    margin: 0;
     justify-content: space-around;
     background: #272626;
     padding: 10px;
@@ -35,15 +35,15 @@ header {
 }
 
 .head {
-  margin-top: 45px;
+  margin-top: 10px;
   .awoo-headlogo {
     width:150px;
     padding-left: 10px;
   }
   .logo-font {
     position: absolute;
-    top: -8px;
-    left: 108px;
+    top: 0px;
+    left: 100px;
     font-family:cursive;
     font-size: 35px;
     font-style: oblique;
@@ -105,9 +105,13 @@ header {
     }
 }
 
+main {
+  width: 100%;
+  height: auto;
+ }
+
 .footer {
   background-color:rgb(53, 52, 52); 
-  position: absolute;
   width: 100%;
   bottom: 0;
   .footer-nav {
@@ -162,30 +166,23 @@ header {
       color:$footerNav;
     }
   }
-  .awoo-footlogo {
-    width:100px;
-    position: absolute;
-    left: 70%;
-    top: 20%;
-    float: left;
-  }
   .awoo-foottext1 {
     font-size: 15px;
     line-height: 24px;
     color: $hover-color;
-    position: absolute;
-    left: 80%;
-    bottom: 60%;
-    float: left;
+    position: relative;
+    bottom: 50px;
+    float:right; 
+    margin-right: 50px;
   }
   .awoo-foottext2 {
     color: $hover-color;
     font-weight: bold;
     font-size: 26px;
     line-height: 24px;
-    position: absolute;
-    left: 80%;
-    bottom: 45%;
-    float: left;
+    position: relative;
+    bottom: 50px;
+    float:right;
+    margin-right: 50px;
   }
 }
