--- a/src/components/erroralert/ErrorAlert.scss
+++ b/src/components/erroralert/ErrorAlert.scss
@@ -6,9 +6,7 @@
 }
 
 .alert {
-  margin-top: 1rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 1rem;
   padding: .75rem 1.25rem;
   border-radius: .25rem;
 }
