--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -1,214 +1,1 @@
-header {
-  width: 100%;
-  border-bottom: 1px solid #dfdfdf;
-}
-
-.header-top {
-  width: 100%;
-  top: 0;
-}
-
-.header-top .top-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  background: #272626;
-  padding: 10px;
-}
-
-.header-top .top-menu li a {
-  color: #dbe2e2;
-  padding: 10px;
-  font-size: 18px;
-  text-decoration: none;
-}
-
-.header-top .top-menu li a:hover {
-  color: #999;
-  text-decoration: underline;
-}
-
-.head {
-  margin-top: 10px;
-}
-
-.head .awoo-headlogo {
-  width: 150px;
-  padding-left: 10px;
-}
-
-.head .logo-font {
-  position: absolute;
-  top: 0px;
-  left: 100px;
-  font-family: cursive;
-  font-size: 35px;
-  font-style: oblique;
-  margin-top: 100px;
-  color: #ee5d84;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.head .icon a:nth-child(1) {
-  display: block;
-  width: 50px;
-  margin-right: 50px;
-}
-
-.head .icon a {
-  float: right;
-  margin-top: 30px;
-  margin-right: 20px;
-  color: #999;
-  font-size: 35px;
-  margin-left: 10px;
-}
-
-.head .icon a i {
-  color: #ee5d84;
-}
-
-.head .icon a i:hover {
-  color: #272626;
-}
-
-.search {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  top: 5%;
-  margin-top: 50px;
-}
-
-.search .search-input {
-  padding-left: 5px;
-  border: 1.5px solid #ee5d84;
-  cursor: pointer;
-  width: 300px;
-  border-radius: 5px 0 0 5px;
-  height: 30px;
-  outline: none;
-  cursor: text;
-}
-
-.search .sure-button {
-  padding: 5px 15px;
-  border: 1.1px solid #ee5d84;
-  background-color: #ee5d84;
-  color: #fff;
-  width: 70px;
-  font-size: 13px;
-  margin-left: -5px;
-  border-radius: 0 5px 5px 0;
-  outline: none;
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.search .sure-button:hover {
-  opacity: 1;
-}
-
-main {
-  width: 100%;
-  height: auto;
-}
-
-.footer {
-  background-color: #353434;
-  width: 100%;
-  bottom: 0;
-}
-
-.footer .footer-nav {
-  padding: 10px;
-  line-height: 24px;
-}
-
-.footer .footer-nav a {
-  text-decoration: none;
-  color: #e6e3e3;
-  font-size: 18px;
-}
-
-.footer .footer-nav a:hover {
-  color: #999;
-  text-decoration: underline;
-}
-
-.footer .footer-nav span {
-  color: #e6e3e3;
-}
-
-.footer .footer-info {
-  margin-left: 10px;
-  font-size: 16px;
-  line-height: 24px;
-  color: #e6e3e3;
-}
-
-.footer .footer-service {
-  padding: 10px;
-  font-size: 18px;
-  line-height: 24px;
-  color: #e6e3e3;
-}
-
-.footer .footer-service a {
-  text-decoration: none;
-  color: #e6e3e3;
-}
-
-.footer .footer-service a:hover {
-  color: #999;
-  text-decoration: underline;
-}
-
-.footer .footer-company {
-  margin-left: 10px;
-}
-
-.footer .footer-company span {
-  font-size: 16px;
-  line-height: 24px;
-  color: #e6e3e3;
-}
-
-.footer .footer-address {
-  margin-left: 10px;
-}
-
-.footer .footer-address span {
-  font-size: 16px;
-  line-height: 24px;
-  color: #e6e3e3;
-}
-
-.footer .awoo-foottext1 {
-  font-size: 15px;
-  line-height: 24px;
-  color: #999;
-  position: relative;
-  bottom: 50px;
-  float: right;
-  margin-right: 50px;
-}
-
-.footer .awoo-foottext2 {
-  color: #999;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 24px;
-  position: relative;
-  bottom: 50px;
-  float: right;
-  margin-right: 50px;
-}
-/*# sourceMappingURL=header.css.map */
+body{margin:0;padding:0}header{width:100%;border-bottom:1px solid #dfdfdf}.header-top{width:100%;top:0}.header-top .top-menu{display:-webkit-box;display:-ms-flexbox;display:flex;margin:0;-ms-flex-pack:distribute;justify-content:space-around;background:#272626;padding:10px}.header-top .top-menu li{list-style-type:none}.header-top .top-menu li a{color:#dbe2e2;padding:10px;font-size:18px;text-decoration:none}.header-top .top-menu li a:hover{color:#999;text-decoration:underline}.head{margin-top:10px}.head .awoo-headlogo{width:150px;padding-left:10px}.head .logo-font{position:absolute;top:0;left:100px;font-family:cursive;font-size:35px;font-style:oblique;margin-top:100px;color:#ee5d84;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.head .icon a:first-of-type{display:block;width:50px;margin-right:50px}.head .icon a{float:right;margin-top:30px;margin-right:20px;color:#999;font-size:35px;margin-left:10px}.head .icon a i{color:#ee5d84}.head .icon a i:hover{color:#272626}.search{position:absolute;left:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);top:5%;margin-top:50px}.search .search-input{padding-left:5px;border:1.3px solid #ee5d84;cursor:pointer;width:300px;border-radius:5px 0 0 5px;height:30px;outline:none;cursor:text}.search .sure-button{padding-left:5px;height:30px;border:1px solid #ee5d84;background-color:#ee5d84;color:#fff;width:70px;font-size:13px;margin-left:-6px;border-radius:0 5px 5px 0;outline:none;opacity:.8;cursor:pointer}.search .sure-button:hover{opacity:1}main{width:100%;height:auto}.footer{background-color:#353434;width:100%;position:relative;bottom:0}.footer .footer-nav{padding:10px;line-height:24px}.footer .footer-nav a{text-decoration:none;color:#e6e3e3;font-size:18px}.footer .footer-nav a:hover{color:#999;text-decoration:underline}.footer .footer-nav span{color:#e6e3e3}.footer .footer-info{margin-left:10px;font-size:16px;line-height:24px;color:#e6e3e3}.footer .footer-service{padding:10px;font-size:18px;line-height:24px;color:#e6e3e3}.footer .footer-service a{text-decoration:none;color:#e6e3e3}.footer .footer-service a:hover{color:#999;text-decoration:underline}.footer .footer-company{margin-left:10px}.footer .footer-company span{font-size:16px;line-height:24px;color:#e6e3e3}.footer .footer-address{margin-left:10px}.footer .footer-address span{font-size:16px;line-height:24px;color:#e6e3e3}.footer .awoo-foottext1{font-size:15px;bottom:-100px}.footer .awoo-foottext1,.footer .awoo-foottext2{line-height:24px;color:#999;position:relative;float:right;margin-right:15vw}.footer .awoo-foottext2{font-weight:700;font-size:26px}.spec-info{padding:0 50px}.spec-info ul{margin:50px auto;width:70%}.spec-info li{border:1px solid #ccc;display:-webkit-box;display:-ms-flexbox;display:flex}.spec-info li:not(:last-child){border-bottom:0}.spec-info li>div{padding:20px}.spec-info li .title{border-right:1px solid #ccc;width:120px}.spec-info li .detail{width:100%}#cupid-product-tags{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}#cupid-product-tags a{display:block;text-decoration:none}#cupid-product-tags .tag{background:#f47f9d;border:1px solid #ee5d84;border-radius:8px;color:#fff;margin-bottom:10px;margin-right:8px;padding:5px 10px}#cupid-product-tags .tag :hover{cursor:pointer}
