接收資料產出tag

--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -238,7 +238,7 @@ main {
     text-decoration: none;
   }
 
-  .tag {
+  .cupid-tag {
     background: #f47f9d;
     border: 1px solid #ee5d84;
     border-radius: 8px;
