新增tags full_link、demo頁面新增連結至各個html

--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -39,6 +39,15 @@ header {
   }
 }
 
+.pagNav {
+  padding: 20px 0;
+  width: 100%;
+  text-align: center;
+  a {
+    color: #ee5d84;
+  }
+}
+
 .head {
   margin-top: 10px;
   .awoo-headlogo {
