--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -43,8 +43,11 @@ header {
   padding: 20px 0;
   width: 100%;
   text-align: center;
+
   a {
     color: #ee5d84;
+    padding: 0 10px;
+
   }
 }
 
@@ -234,6 +237,9 @@ main {
       width: 100%;
     }
   }
+}
+.section-padding {
+  padding: 20px 25px;
 }
 
 #cupid-product-tag {
