--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -22,17 +22,26 @@ header {
     margin: 0;
     justify-content: space-around;
     background: #272626;
-    padding: 10px;
+
+    @media (min-width: 701px) {
+      padding: 10px;
+    }
+    @media (max-width: 700px) {
+      padding: 5px;
+    }
+
     li {
       list-style-type: none;
+      text-align: center;
+      padding: 2px;
+
       a {
         color: rgb(219, 226, 226);
-        padding: 10px;
+        text-align: center;
         font-size: 18px;
         text-decoration: none;
         &:hover {
           color: $hover-color;
-          text-decoration: underline;
         }
       }
     }
@@ -51,69 +60,170 @@ header {
   }
 }
 
-.head {
-  margin-top: 10px;
-  .awoo-headlogo {
-    width:150px;
-    padding-left: 10px;
-  }
-  .logo-font {
-    position: absolute;
-    top: 0px;
-    left: 100px;
-    font-family:cursive;
-    font-size: 35px;
-    font-style: oblique;
-    margin-top: 100px;
-    color: $smallThreeColor;
-    user-select:none;
-  }
-  .icon {
-    a:nth-of-type(1) {
-      display: block;
-      width: 50px;
-      margin-right: 50px;
-    }
-    a {
-      float: right;
-      margin-top: 30px;
-      margin-right: 20px;
-      color: #999;
-      font-size:35px;
-      margin-left: 10px;
-      i {
-        color:#ee5d84;
-        &:hover {
-          color: $iconhover-color;
-        }
-      }
-    }
-  }
-}
+@media screen and (max-width: 700px) {
+	.awoo-headlogo {
+		width: calc(130px + 1vw);
+		max-width: 50vw;
+	}
 
-.search {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 5%;
-    margin-top: 50px;
+	.logo-font {
+		font-family: cursive;
+		font-size: calc(12px + 4vw);
+		font-style: oblique;
+		margin-left: calc(-40px - 3vw);
+		color: $smallThreeColor;
+		user-select: none;
+		word-wrap: break-word;
+		display: inline-block;
+	}
+
+
+	.search {
+		margin: 15px;
+    width: calc(130px + 14vw);
+
     .search-input {
       padding-left: 5px;
-      border:1.3px solid $smallThreeColor;
-      cursor:pointer;
-      width: 300px;
+      border: 1.3px solid $smallThreeColor; 
+      cursor: pointer;
+      width: calc(90px + 11vw);
       border-radius: 5px 0 0 5px;
       height: 30px;
       outline: none;
       cursor: text;
     }
+
+    .sure-button {
+      padding-left: 5px;
+      height: 30px;
+      border: 1px solid $smallThreeColor;
+      background-color: $smallThreeColor;
+      color: #fff;
+      width: calc(37px + 3vw);
+      font-size: 13px;
+      margin-left: -6px;
+      border-radius: 0 5px 5px 0;
+      outline: none;
+      opacity: 0.8;
+      cursor: pointer; 
+      &:hover {
+        opacity: 1;
+      }
+    }
+	}
+
+	.icon {
+		@media (min-width: 370px) {
+			position: absolute;
+			top: 126px;
+			right: 0%;
+		}
+
+		@media (max-width: 369px) {
+			position: absolute;
+			top: 150px;
+			right: 0%;
+		}
+
+		a:nth-of-type(1) {
+			display: block;
+			width: calc(40px + 0.8vw);
+			max-width: 50px;
+			margin: 15px calc(5.5vw - 22px);
+		}
+
+
+		a {
+			float: right;
+			display: block;
+			max-width: 90vw;
+			margin: 15px;
+			color: #999;
+			font-size: calc(14px + 3vw);
+
+			i {
+				color: #ee5d84;
+				&:hover {
+					color: $iconhover-color;
+				}
+			}   
+		}
+	}
+} 
+
+// Large screen
+@media screen and (min-width: 701px) {
+	.head {
+		margin-top: 10px;
+
+		.awoo-headlogo {
+			width: calc(130px + 1vw);
+			max-width: 150px;
+			height: auto;
+			padding-left: 10px;
+		}
+
+		.logo-font {
+			font-family: cursive;
+			font-size: calc(24px + 0.7vw);
+			font-style: oblique;
+			margin-left: -70px;
+			color: $smallThreeColor;
+			user-select: none;
+		}
+
+		.icon {
+			float: right;
+
+			a:nth-of-type(1) {
+				display: block;
+				width: calc(40px + 0.8vw);
+				max-width: 50px;
+				margin-right: calc(5.5vw - 22px);
+				margin-top: 15px;
+				margin-bottom: 15px;
+			}
+
+			a {
+				float: right;
+				margin: 15px 15px;
+				color: #999;
+				font-size: 35px;
+
+				i {
+					color: #ee5d84;
+					&:hover {
+						color: $iconhover-color;
+					}
+				}   
+			}
+		}
+	}
+
+	.search {
+    position: absolute;
+    left: 50%;
+    top: 80px;
+    transform: translateX(-50%);
+
+    .search-input {
+      padding-left: 5px;
+      border:1.3px solid $smallThreeColor;
+      cursor:pointer;
+      width: calc(130px + 7vw);
+      border-radius: 5px 0 0 5px;
+      height: 30px;
+      outline: none;
+      cursor: text;
+    }
+
     .sure-button {
       padding-left: 5px;
       height: 30px;
       border:1px solid $smallThreeColor;
       background-color: $smallThreeColor;
       color: #fff;
-      width: 70px;
+      width: calc(40px + 2vw);
       font-size: 13px;
       margin-left: -6px;
       border-radius: 0 5px 5px 0;
@@ -124,6 +234,7 @@ header {
         opacity: 1;
       }
     }
+	}
 }
 
 main {
@@ -131,81 +242,264 @@ main {
   height: auto;
  }
 
-.footer {
-  background-color:rgb(53, 52, 52);
-  width: 100%;
-  position: relative ;
-  bottom:0;
-  .footer-nav {
+// Large screen
+@media (min-width: 761px) {
+  .footer {
+    background-color: rgb(53, 52, 52);
+    width: 100%;
+    position: relative;
+    bottom: 0;
+
+    .footer-nav {
       padding: $footer-content-length;
       line-height: 24px;
-        a {
-          text-decoration: none;
-          color:$footerNav;
-          font-size: 18px;
-          &:hover {
-            color:$hover-color;
-            text-decoration: underline;
-          }
+			margin-left: 5px;
+      font-size: 18px;
+      a {
+        text-decoration: none;
+        color:$footerNav;
+        font-size: 18px;
+        &+a:before {
+          content: "|";
+					margin: 0 7px 0 3px;
+				}
+        &:hover {
+          color:$hover-color;
+          text-decoration: underline;
         }
-        span {
-          color:$footerNav;
-        }
-    }
-  .footer-info {
-    margin-left: $footer-content-length;
-    font-size: 16px;
-    line-height: 24px;
-    color:$footerNav;
-  }
-  .footer-service {
-    padding: $footer-content-length;
-    font-size: 18px;
-    line-height: 24px;
-    color:$footerNav;
-    a {
-      text-decoration: none;
-      color:$footerNav;
-      &:hover {
-        color:$hover-color;
-        text-decoration: underline;
+      }
+      span {
+        color: $footerNav;
+				&:after {
+				  content:"：";
+				}
       }
     }
-  }
-  .footer-company {
-    margin-left: $footer-content-length;
-    span {
-      font-size: 16px;
-      line-height: 24px;
-      color:$footerNav;
-    }
-  }
-  .footer-address {
-    margin-left: $footer-content-length;
-    span {
-      font-size: 16px;
-      line-height: 24px;
-      color:$footerNav;
-    }
-  }
-    .awoo-foottext1 {
-      font-size: 15px;
-      line-height: 24px;
-      color: $hover-color;
-      float:right;
-      margin-right: 15vw;
 
-    }
-    .awoo-foottext2 {
-      color: $hover-color;
-      font-weight: bold;
-      font-size: 26px;
+    .footer-service {
+      padding: $footer-content-length;
+			margin-left: 5px;
+      font-size: 18px;
       line-height: 24px;
-      position: relative;
-      float:right;
-      margin-right: 15vw;
+      color: $footerNav;
+
+      a {
+        text-decoration: none;
+        color: $footerNav;
+        &+a:before {
+          content: "|";
+					margin: 0 7px 0 3px;
+				}
+        &:hover {
+          color: $hover-color;
+          text-decoration: underline;
+        }
+      }
+      span {
+        color: $footerNav;
+				&:after {
+				  content:"：";
+				}
+      }
     }
+
+    .footer-info {
+			padding: 5px;
+      margin-left: $footer-content-length;
+      font-size: 16px;
+      line-height: 24px;
+      color: $footerNav;
+    }
+
+    .footer-company {
+			padding: 5px;
+      margin-left: $footer-content-length;
+
+      span {
+        font-size: 16px;
+        line-height: 24px;
+        color: $footerNav;
+      }
+    }
+
+    .footer-address {
+			padding: 5px;
+      margin-left: $footer-content-length;
+
+      span {
+        font-size: 16px;
+        line-height: 24px;
+        color: $footerNav;
+      }
+    }
+
+    .footer-seo-tel {
+			margin-left: 10px;
+			padding: 5px;
+      color: $hover-color;
+
+      .awoo-foottext1 {
+        font-size: 20px;
+        line-height: 24px;
+				vertical-align: middle;
+      }
+
+      .awoo-foottext2 {
+        font-weight: bold;
+        font-size: 26px;
+        line-height: 24px;
+				vertical-align: middle;
+      }
+		}
   }
+}
+
+// Small screen
+@media (max-width: 760px) {
+	.footer {
+    background-color: rgb(53, 52, 52);
+    width: 100%;
+    position: relative;
+    bottom: 0;
+		display: inline-block;
+
+    .footer-nav {
+      @media (min-width: 356px) {
+        width: calc(50% - 20px);
+			}
+      @media (max-width: 355px) {
+        width: calc(100% - 20px);
+			}
+
+      float: left;
+      padding: $footer-content-length;
+      font-size: 18px;
+			text-align: center;
+      a {
+				padding: 3px;
+				margin: 0 auto;
+				display: block;
+				width: fit-content;
+        text-decoration: none;
+        color: $footerNav;
+        font-size: 18px;
+        &:hover {
+          color: $hover-color;
+          text-decoration: underline;
+        }
+      }
+      span {
+        color: $footerNav;
+				font-size: 22px;
+				&:after {
+				  content: "";
+				  margin: 3px auto;
+				  display: block;
+					height: 2px;
+					width: calc(100px + 25%);
+				  border-bottom: 2px solid $footerNav;
+				}
+      }
+    }
+
+    .footer-service {
+      @media (min-width: 356px) {
+        width: calc(50% - 20px);
+			}
+      @media (max-width: 355px) {
+        width: calc(100% - 20px);
+			}
+      float: left;
+      padding: $footer-content-length;
+      font-size: 18px;
+      color: $footerNav;
+			text-align: center;
+
+      a {
+				padding: 3px;
+				margin: 0 auto;
+				display: block;
+				width: fit-content;
+        text-decoration: none;
+        color: $footerNav;
+        &:hover {
+          color: $hover-color;
+          text-decoration: underline;
+        }
+      }
+      span {
+        color: $footerNav;
+				font-size: 22px;
+				&:after {
+				  content: "";
+				  margin: 3px auto;
+				  display: block;
+					height: 2px;
+					width: calc(100px + 25%);
+				  border-bottom: 2px solid $footerNav;
+				}
+      }
+    }
+
+    .footer-info {
+			padding: 10px;
+			width: calc(100% - 20px);
+      float: left;
+      font-size: 16px;
+      line-height: 24px;
+      color: $footerNav;
+			text-align: center;
+			span {
+			  display: block;
+				padding: 3px;
+			}
+    }
+
+    .footer-company {
+			padding: 10px;
+			width: calc(100% - 20px);
+			text-align: center;
+      float: left;
+      span {
+        font-size: 16px;
+        line-height: 24px;
+        color: $footerNav;
+      }
+    }
+
+    .footer-address {
+			padding: 10px;
+			width: calc(100% - 20px);
+			text-align: center;
+      float: left;
+      span {
+        font-size: 16px;
+        line-height: 24px;
+        color: $footerNav;
+      }
+    }
+
+    .footer-seo-tel {
+      padding: 10px;
+			text-align: center;
+      color: $hover-color;
+
+      .awoo-foottext1 {
+        font-size: 20px;
+        line-height: 24px;
+				vertical-align: middle;
+      }
+      
+      .awoo-foottext2 {
+        font-weight: bold;
+        font-size: 26px;
+        line-height: 24px;
+				vertical-align: middle;
+				display: inline-block;
+      }
+    }
+	}
+}
 
 .spec-info {
   padding: 0 50px;
