--- a/demo/css/header.scss
+++ b/demo/css/header.scss
@@ -583,4 +583,15 @@ main {
   a {
     text-decoration: none;
   }
+  .rec-arrow {
+    border-radius: 5px;
+    &:hover {
+      color: rgb(255, 255, 255);
+      background-color: #aaaaaa;
+      box-shadow: rgb(51, 51, 51) 0px 0px 2px 0px;
+    }
+    &.rec-arrow-left {
+      padding-left: 5px;
+    }
+  }
 }
